--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -83,8 +83,7 @@ RUN mkdir -p "$FILE_STORAGE_LOCAL_ROOT_DIR" && \
     chown -R nodejs:nodejs "$FILE_STORAGE_LOCAL_ROOT_DIR" && \
     chmod 1777 "$FILE_STORAGE_LOCAL_ROOT_DIR"
 
-# Volume for local file storage (if used)
-VOLUME /var/lib/outline/data
+# Note: Railway uses Railway Volumes for persistent storage, not Docker VOLUME
 
 # Switch to non-root user
 USER nodejs
