--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -64,11 +64,10 @@ RUN addgroup --gid 1001 nodejs && \
     mkdir -p /var/lib/outline/data && \
     chown -R nodejs:nodejs /var/lib/outline
 
-# Install runtime dependencies and enable corepack for Yarn 4
+# Install runtime dependencies
 RUN apt-get update && \
     apt-get install -y wget curl && \
-    rm -rf /var/lib/apt/lists/* && \
-    corepack enable
+    rm -rf /var/lib/apt/lists/*
 
 # Copy built application from builder stage
 COPY --from=builder --chown=nodejs:nodejs $APP_PATH/build ./build
@@ -77,8 +76,6 @@ COPY --from=builder --chown=nodejs:nodejs $APP_PATH/public ./public
 COPY --from=builder --chown=nodejs:nodejs $APP_PATH/.sequelizerc ./.sequelizerc
 COPY --from=builder --chown=nodejs:nodejs $APP_PATH/node_modules ./node_modules
 COPY --from=builder --chown=nodejs:nodejs $APP_PATH/package.json ./package.json
-COPY --from=builder --chown=nodejs:nodejs $APP_PATH/yarn.lock ./yarn.lock
-COPY --from=builder --chown=nodejs:nodejs $APP_PATH/.yarnrc.yml ./.yarnrc.yml
 
 # Set file storage directory
 ENV FILE_STORAGE_LOCAL_ROOT_DIR=/var/lib/outline/data
@@ -98,6 +95,6 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
 # Expose port (Railway will override with PORT env var)
 EXPOSE 3000
 
-# Start command - run migrations then start server
-CMD ["sh", "-c", "yarn db:migrate && yarn start"]
+# Start command - run migrations then start server (using node directly, not yarn)
+CMD ["sh", "-c", "./node_modules/.bin/sequelize db:migrate && node ./build/server/index.js"]
 
