feat: rebrand Outline to IMC Pelita Logistik KMS
- Update APP_NAME in server/env.ts to 'IMC Pelita Logistik KMS'
- Update PWA manifest name/short_name in vite.config.ts
- Update app.json and package.json with IMC branding
- Replace all favicon and PWA icons with IMC logos
- Rewrite onboarding content in Indonesian for IMC context
- Remove external docs.getoutline.com links from WelcomeEmail
- Update en_US/translation.json with IMC KMS references
- Rebrand README.md with IMC Pelita Logistik information

--- a/app.json
+++ b/app.json
@@ -1,9 +1,15 @@
 {
-  "name": "Outline",
-  "description": "Open source wiki and knowledge base for growing teams",
+  "name": "IMC Pelita Logistik KMS",
+  "description": "Internal knowledge management system for IMC Pelita Logistik",
   "website": "https://www.getoutline.com/",
   "repository": "https://github.com/outline/outline",
-  "keywords": ["wiki", "team", "node", "markdown", "slack"],
+  "keywords": [
+    "wiki",
+    "team",
+    "node",
+    "markdown",
+    "slack"
+  ],
   "success_url": "/",
   "formation": {
     "web": {
