--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "outline",
+  "name": "imc-pelita-logistik-kms",
   "private": true,
   "license": "Business Source License 1.1",
   "main": "index.js",
